force-app/main/default/objects/Comunicado__c/Comunicado__c.object-meta.xml
<CustomObject>
    <label>Comunicado</label>
    <nameField>
        <displayFormat>C {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comunicados</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>