force-app/main/default/objects/Comunicado__c/fields/Data_Envio_Para_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Data_Envio_Para_Whatsapp__c</fullName>
    <description>Data de envio de imagem para o whatsapp</description>
    <inlineHelpText>Data de envio de imagem para o whatsapp</inlineHelpText>
    <label>Data Envio Para Whatsapp</label>
    <type>Date</type>
</CustomField>