force-app/main/default/objects/Comunicado__c/fields/Descricao_curta__c.field-meta.xml
<CustomField>
    <fullName>Descricao_curta__c</fullName>
    <label>Descrição curta</label>
    <type>TextArea</type>
</CustomField>