force-app/main/default/objects/Comunicado__c/fields/Link_da_Imagem__c.field-meta.xml
<CustomField>
    <fullName>Link_da_Imagem__c</fullName>
    <description>link da imagem para ser envianda para o whatsapp</description>
    <inlineHelpText>link da imagem para ser envianda para o whatsapp</inlineHelpText>
    <label>Link da Imagem</label>
    <type>Url</type>
</CustomField>